--- a/css/login.css
+++ b/css/login.css
@@ -24,7 +24,7 @@ body {
 	font-size: 18px;
 }
 
-.login-container {
+.container {
 	display: flex;
 	flex-direction: column;
 	width: 450px;
@@ -66,14 +66,14 @@ body {
 	padding: 10px;
 }
 
-.inputs {
+.inputbox {
 	display: flex;
 	flex-direction: column;
 	border-radius: 10px;
 	position: relative;
 }
 
-.inputs input {
+.inputbox input {
 	font-size: 1.2rem;
 	padding: 10px;
 	border-radius: 5px;
@@ -107,7 +107,7 @@ input:valid + .placeholder {
 	color: white;
 }
 
-.loginbutton {
+.login-area {
 	display: flex;
 }
 
@@ -140,7 +140,7 @@ button:hover {
 }
 
 @media (max-width: 500px) {
-	.login-container {
+	.container {
 		height: 100%;
 		box-shadow: none;
 		border-radius: 0;
