--- a/css/login.css
+++ b/css/login.css
@@ -29,7 +29,6 @@ body {
 	flex-direction: column;
 	width: 450px;
 	background-color: #f7f3fa;
-	padding: 1em;
 	border-radius: 10px;
 	box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.5);
 }
@@ -37,19 +36,22 @@ body {
 .login-section {
 	display: flex;
 	flex-direction: column;
-	gap: 1em;
 }
 
 .logo-area {
-	padding: 10px;
+	padding: 80px 30px;
 	display: flex;
 	gap: 1em;
 	flex-direction: column;
+	border-radius: 10px 10px 0 0;
 	align-items: center;
+	background-image: url(/img/signup.avif);
+	background-size: cover;
 }
 
 .logo-area span {
 	font-size: 1.5em;
+	color: white;
 }
 
 .logo-area img {
@@ -59,11 +61,18 @@ body {
 	border: 2px solid grey;
 }
 
-.input-area {
+.inputs {
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
-	padding: 10px;
+}
+
+.input-area {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	height: 18em;
+	padding: 1em;
 }
 
 .inputbox {
@@ -145,16 +154,31 @@ button:hover {
 	background-color: rgba(255, 0, 0, 0.15);
 }
 
+.container > div {
+	height: 100%;
+}
+
 @media (max-width: 500px) {
 	.container {
 		height: 100%;
 		box-shadow: none;
 		border-radius: 0;
 		flex: 1;
+		justify-content: space-around;
+	}
+
+	.logo-area {
+		border-radius: 0;
+		padding: 4em;
 	}
 
 	.login-section {
+		height: 100%;
+	}
+
+	.input-area {
 		flex: 1;
-		justify-content: space-evenly;
+		gap: 50px;
+		justify-content: center;
 	}
 }
